--- a/package.json
+++ b/package.json
@@ -1,213 +1,11 @@
 {
-  "name": "hyperclick",
-  "repository": "https://github.com/facebook/nuclide",
+  "name": "atom-ide-hyperclick",
+  "repository": "https://github.com/atom-ide-community/atom-ide-hyperclick",
   "main": "./lib/main.js",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "Hyperclick UI",
-  "author": "NEEDS OWNER",
-  "atomTestRunner": "../../../scripts/atom-test-runner.js",
-  "atomConfig": {
-    "darwinTriggerKeys": {
-      "title": "Trigger keys for macOS",
-      "description": "macOS: Combination of keys to activate Hyperclick while hovering for text",
-      "type": "string",
-      "default": "metaKey",
-      "enum": [
-        {
-          "value": "shiftKey",
-          "description": "shift + click"
-        },
-        {
-          "value": "shiftKey,ctrlKey",
-          "description": "shift + control + click"
-        },
-        {
-          "value": "shiftKey,ctrlKey,altKey",
-          "description": "shift + control + option + click"
-        },
-        {
-          "value": "shiftKey,ctrlKey,altKey,metaKey",
-          "description": "shift + control + option + command + click"
-        },
-        {
-          "value": "shiftKey,altKey",
-          "description": "shift + option + click"
-        },
-        {
-          "value": "shiftKey,altKey,metaKey",
-          "description": "shift + option + command + click"
-        },
-        {
-          "value": "shiftKey,metaKey",
-          "description": "shift + command + click"
-        },
-        {
-          "value": "ctrlKey",
-          "description": "control + click"
-        },
-        {
-          "value": "ctrlKey,metaKey",
-          "description": "control + command + click"
-        },
-        {
-          "value": "ctrlKey,altKey",
-          "description": "control + option + click"
-        },
-        {
-          "value": "ctrlKey,altKey,metaKey",
-          "description": "control + option + command + click"
-        },
-        {
-          "value": "altKey",
-          "description": "option + click"
-        },
-        {
-          "value": "altKey,metaKey",
-          "description": "option + command + click"
-        },
-        {
-          "value": "metaKey",
-          "description": "command + click"
-        }
-      ]
-    },
-    "linuxTriggerKeys": {
-      "title": "Trigger keys for Linux",
-      "description": "Linux: Combination of keys to activate Hyperclick while hovering for text",
-      "type": "string",
-      "default": "ctrlKey",
-      "enum": [
-        {
-          "value": "shiftKey",
-          "description": "shift + click"
-        },
-        {
-          "value": "shiftKey,ctrlKey",
-          "description": "shift + control + click"
-        },
-        {
-          "value": "shiftKey,ctrlKey,altKey",
-          "description": "shift + control + alt + click"
-        },
-        {
-          "value": "shiftKey,ctrlKey,altKey,metaKey",
-          "description": "shift + control + alt + meta + click"
-        },
-        {
-          "value": "shiftKey,altKey",
-          "description": "shift + alt + click"
-        },
-        {
-          "value": "shiftKey,altKey,metaKey",
-          "description": "shift + alt + meta + click"
-        },
-        {
-          "value": "shiftKey,metaKey",
-          "description": "shift + meta + click"
-        },
-        {
-          "value": "ctrlKey",
-          "description": "control + click"
-        },
-        {
-          "value": "ctrlKey,metaKey",
-          "description": "control + meta + click"
-        },
-        {
-          "value": "ctrlKey,altKey",
-          "description": "control + alt + click"
-        },
-        {
-          "value": "ctrlKey,altKey,metaKey",
-          "description": "control + alt + meta + click"
-        },
-        {
-          "value": "altKey",
-          "description": "alt + click"
-        },
-        {
-          "value": "altKey,metaKey",
-          "description": "alt + meta + click"
-        },
-        {
-          "value": "metaKey",
-          "description": "meta + click"
-        }
-      ]
-    },
-    "win32TriggerKeys": {
-      "title": "Trigger keys for Windows",
-      "description": "Windows: Combination of keys to activate Hyperclick while hovering for text",
-      "type": "string",
-      "default": "ctrlKey",
-      "enum": [
-        {
-          "value": "shiftKey",
-          "description": "shift + click"
-        },
-        {
-          "value": "shiftKey,ctrlKey",
-          "description": "shift + control + click"
-        },
-        {
-          "value": "shiftKey,ctrlKey,altKey",
-          "description": "shift + control + alt + click"
-        },
-        {
-          "value": "shiftKey,ctrlKey,altKey,metaKey",
-          "description": "shift + control + alt + meta + click"
-        },
-        {
-          "value": "shiftKey,altKey",
-          "description": "shift + alt + click"
-        },
-        {
-          "value": "shiftKey,altKey,metaKey",
-          "description": "shift + alt + meta + click"
-        },
-        {
-          "value": "shiftKey,metaKey",
-          "description": "shift + meta + click"
-        },
-        {
-          "value": "ctrlKey",
-          "description": "control + click"
-        },
-        {
-          "value": "ctrlKey,metaKey",
-          "description": "control + meta + click"
-        },
-        {
-          "value": "ctrlKey,altKey",
-          "description": "control + alt + click"
-        },
-        {
-          "value": "ctrlKey,altKey,metaKey",
-          "description": "control + alt + meta + click"
-        },
-        {
-          "value": "altKey",
-          "description": "alt + click"
-        },
-        {
-          "value": "altKey,metaKey",
-          "description": "alt + meta + click"
-        },
-        {
-          "value": "metaKey",
-          "description": "meta + click"
-        }
-      ]
-    }
-  },
-  "nuclide": {
-    "configMetadata": {
-      "pathComponents": [
-        "IDE",
-        "Hyperclick"
-      ]
-    }
-  },
+  "author": "Tony Brix <tony@brix.ninja>",
+  "atomTestRunner": "./spec/runner",
   "consumedServices": {
     "hyperclick.provider": {
       "versions": {
@@ -227,5 +25,23 @@
       }
     }
   },
-  "private": true
+  "scripts": {
+    "format": "prettier --write .",
+    "lint": "eslint . --ext js,json",
+    "test": "atom --test spec"
+  },
+  "devDependencies": {
+    "atom-jasmine3-test-runner": "^4.4.8",
+    "eslint": "^7.4.0",
+    "eslint-plugin-json": "^2.1.1",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "prettier": "^2.0.5"
+  },
+  "dependencies": {
+    "log4js": "^6.3.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "rxjs": "5.5.5"
+  }
 }
