--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,39 +1,4 @@
 {
-  "root": true,
-  "env": {
-    "atomtest": true,
-    "es6": true,
-    "node": true,
-    "browser": true,
-    "jasmine": true
-  },
-  "globals": {
-    "atom": "readonly",
-    "measure": "readonly"
-  },
-  "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
-    },
-    "ecmaVersion": 2018,
-    "sourceType": "module"
-  },
-  "plugins": ["prettier"],
-  "extends": ["prettier", "eslint:recommended"],
-  "ignorePatterns": ["dist/", "node_modules/"],
-  "overrides": [
-    {
-      "files": ["*.json"],
-      "plugins": ["json"],
-      "extends": ["prettier", "plugin:json/recommended"],
-      "rules": {
-        "json/*": [
-          "error",
-          {
-            "allowComments": true
-          }
-        ]
-      }
-    }
-  ]
+  "extends": "eslint-config-atomic",
+  "ignorePatterns": ["dist/", "node_modules/"]
 }
