--- a/package.json
+++ b/package.json
@@ -29,16 +29,18 @@
     "format": "prettier --write .",
     "lint": "eslint .",
     "lintfix": "eslint . --fix",
-    "test": "atom --test spec"
+    "test": "atom --test spec",
+    "bump": "ncu -u"
   },
   "devDependencies": {
     "@types/atom": "1.40.4",
     "@types/node": "^14.0.23",
     "atom-jasmine3-test-runner": "^4.4.8",
     "eslint": "^7.4.0",
-    "eslint-config-atomic": "^0.1.0",
+    "eslint-config-atomic": "^1.0.0",
     "prettier": "^2.0.5",
-    "typescript": "^3.9.6"
+    "typescript": "^3.9.7",
+    "npm-check-updates": "7.0.2"
   },
   "dependencies": {
     "log4js": "^6.3.0",
