chore(lint): add react plugin

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,7 @@
 {
-  "extends": "eslint-config-atomic",
+  "extends": [
+    "eslint-config-atomic",
+    "plugin:react/recommended"
+  ],
   "ignorePatterns": ["dist/", "node_modules/"]
 }
