--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -17,8 +17,8 @@ jobs:
       matrix:
         os:
           - ubuntu-latest
-          # - macos-latest
-          # - windows-latest
+          - macos-latest
+          - windows-latest
         atom_channel: [stable, beta]
     steps:
       - uses: actions/checkout@v2
@@ -38,8 +38,8 @@ jobs:
           while read dep; do
               apm install $dep
           done
-      # - name: Run tests 👩🏾‍💻
-      #   run: npm run test
+      - name: Run tests 👩🏾‍💻
+        run: npm run test
 
   Lint:
     if: "!contains(github.event.head_commit.message, '[skip ci]')"
@@ -59,29 +59,30 @@ jobs:
       - name: Lint ✨
         run: npm run lint
 
-  # Release:
-  #   needs: [Test, Lint]
-  #   if: github.ref == 'refs/heads/master' &&
-  #     github.event.repository.fork == false
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - uses: UziTech/action-setup-atom@v1
-  #     - uses: actions/setup-node@v1
-  #       with:
-  #         node-version: "14.x"
-  #     - name: NPM install
-  #       run: npm ci
-  #     - name: Build and Commit
-  #       run: npm run build-commit
-  #     - name: Release 🎉
-  #       uses: cycjimmy/semantic-release-action@v2
-  #       with:
-  #         extends: |
-  #           @semantic-release/apm-config
-  #       env:
-  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  #         ATOM_ACCESS_TOKEN: ${{ secrets.ATOM_ACCESS_TOKEN  }}
+  Release:
+    needs: [Test, Lint]
+    if: github.ref == 'refs/heads/master' &&
+      github.event.repository.fork == false
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: UziTech/action-setup-atom@v1
+      - uses: actions/setup-node@v1
+        with:
+          node-version: "14.x"
+      - name: NPM install
+        run: npm ci
+      # - name: Build and Commit
+      #   run: npm run build-commit
+      - name: Release 🎉
+        uses: cycjimmy/semantic-release-action@v2
+        with:
+          extends: |
+            @semantic-release/apm-config
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ATOM_ACCESS_TOKEN: ${{ secrets.ATOM_ACCESS_TOKEN  }}
+
   Skip:
     if: contains(github.event.head_commit.message, '[skip ci]')
     runs-on: ubuntu-latest
