--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "typescript": "^3.9.7"
   },
   "dependencies": {
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "rxjs": "^6.6.0"
