--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -27,7 +27,7 @@ jobs:
         run: apm -v
       - name: Install APM dependencies
         run: |
-          apm ci  # uses locked module. use `apm install` for non-locked
+          apm install
       - name: Run tests 👩🏾‍💻
         run: npm run test
 
@@ -42,10 +42,10 @@ jobs:
       #   uses: wagoid/commitlint-github-action@v1
       - uses: actions/setup-node@v2.1.2
         with:
-          node-version: "14.x"
+          node-version: "12.x"
       - name: Install NPM dependencies
         run: |
-          npm ci  # uses locked module. use `npm install` for non-locked
+          npm install
       - name: Lint ✨
         run: npm run lint
 
@@ -59,9 +59,9 @@ jobs:
       - uses: UziTech/action-setup-atom@v1
       - uses: actions/setup-node@v2.1.2
         with:
-          node-version: "14.x"
+          node-version: "12.x"
       - name: NPM install
-        run: npm ci
+        run: npm install
       # - name: Build and Commit
       #   run: npm run build-commit
       - name: Release 🎉
