--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
+    "atom-ide-base": "^1.8.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
