--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - master
 
+env:
+  CI: true
+
 jobs:
   Test:
     if: "!contains(github.event.head_commit.message, '[skip ci]')"
