--- a/.github/workflows/bump_deps.yml
+++ b/.github/workflows/bump_deps.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           node-version: "12"
       - name: Setup PNPM
-        uses: pnpm/action-setup@v1.2.1
+        uses: pnpm/action-setup@master
         with:
           version: latest
 
@@ -32,8 +32,8 @@ jobs:
       - uses: peter-evans/create-pull-request@v3
         with:
           token: ${{ steps.generate-token.outputs.token }}
-          commit-message: "chore: update dependencies"
-          title: "chore: update dependencies"
+          commit-message: "fix: update Dependencies"
+          title: "fix: update Dependencies"
           labels: Dependencies
           branch: "Bump_Dependencies"
 
@@ -45,7 +45,7 @@ jobs:
         with:
           node-version: "12"
       - name: Setup PNPM
-        uses: pnpm/action-setup@v1.2.1
+        uses: pnpm/action-setup@master
         with:
           version: latest
 
