--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -46,7 +46,9 @@ jobs:
       - name: Commit lint ✨
         uses: wagoid/commitlint-github-action@v2
 
-      - uses: UziTech/action-setup-atom@v1
+      - uses: actions/setup-node@v2.1.4
+        with:
+          node-version: "12.x"
       - name: Setup PNPM
         uses: pnpm/action-setup@v1.2.1
         with:
