--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -46,20 +46,19 @@ jobs:
       - name: Commit lint ✨
         uses: wagoid/commitlint-github-action@v2
 
-      - uses: UziTech/action-setup-atom@v1
-      - name: Setup PNPM
-        uses: pnpm/action-setup@v1.2.1
+      - name: Install Node
+        uses: dcodeIO/setup-node-nvm@master
         with:
-          version: latest
+          node-version: "lts/*"
 
       - name: Install dependencies
-        run: pnpm install
+        run: npm install
 
       - name: Format ✨
-        run: pnpm test.format
+        run: npm run test.format
 
       - name: Lint ✨
-        run: pnpm test.lint
+        run: npm run test.lint
 
   Release:
     needs: [Test, Lint]
@@ -69,13 +68,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: UziTech/action-setup-atom@v1
-      - uses: actions/setup-node@v2.1.4
+      - uses: dcodeIO/setup-node-nvm@master
         with:
-          node-version: "12.x"
+          node-version: "lts/*"
       - name: NPM install
         run: npm install
-      # - name: Build and Commit
-      #   run: npm run build-commit
       - name: Release 🎉
         uses: cycjimmy/semantic-release-action@v2
         with:
@@ -84,26 +81,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           ATOM_ACCESS_TOKEN: ${{ secrets.ATOM_ACCESS_TOKEN  }}
-
-  # Automerge:
-  #   needs: [Test, Coverage, Lint]
-  #   runs-on: ubuntu-latest
-  #   if: |
-  #     github.actor == 'dependabot[bot]' &&
-  #     github.event_name == 'pull_request' &&
-  #     startsWith(github.event.pull_request.title, 'chore(deps-dev):')
-  #   steps:
-  #     - name: '@dependabot merge'
-  #       uses: actions/github-script@v2
-  #       with:
-  #         github-token: ${{secrets.GH_TOKEN}}
-  #         script: |
-  #           await github.issues.createComment({
-  #             owner: context.payload.repository.owner.login,
-  #             repo: context.payload.repository.name,
-  #             issue_number: context.payload.pull_request.number,
-  #             body: '@dependabot merge'
-  #           })
 
   Skip:
     if: contains(github.event.head_commit.message, '[skip ci]')
